--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <p style="text-align: center">
             This page is just for testing things. Better to go to
             <b
-                ><a href="https://github.com/DominiqueMakowski/PHQ4Ry"
-                    >https://github.com/DominiqueMakowski/PHQ4R</a
+                ><a
+                    href="https://github.com/DominiqueMakowski/InteroceptiveAccuracyScale"
+                    >https://github.com/DominiqueMakowski/InteroceptiveAccuracyScale</a
                 ></b
             >
         </p>
@@ -48,7 +49,7 @@
         </ul>
         <ul>
             <li>
-                <b><a href="analysis.html">Analysis</a></b>
+                <b><a href="analysis/analysis.html">Analysis</a></b>
             </li>
         </ul>
         <ul>
